--- a/server/widgets/menu/form.hbs
+++ b/server/widgets/menu/form.hbs
@@ -17,18 +17,7 @@
     </select>
   </div>
 
-  <div class="form-group">
-    <label for="widget-form-{{type}}-regionName">Region</label>
-    <select name="regionName" id="widget-form-{{type}}-regionName" class="form-control">
-      {{#each regions}}
-        <option value="{{@key}}" {{#if selected}}selected{{/if}}> {{this.name}}</option>
-      {{/each}}
-    </select>
-  </div>
-
-  <input type="hidden" name="type" value="{{type}}">
-  <input type="hidden" name="layout" value="{{this.layout}}">
-  <input type="hidden" name="theme" value="{{theme}}">
+  {{{controllFields}}}
 
   {{#if id}}
     <input type="hidden" name="id" value="{{id}}">
