--- a/files/public/jquery.dataTables/jquery.dataTables.css
+++ b/files/public/jquery.dataTables/jquery.dataTables.css
@@ -47,19 +47,19 @@ table.dataTable thead .sorting_desc_disabled {
   background-position: center right;
 }
 table.dataTable thead .sorting {
-  background-image: url("../images/sort_both.png");
+  background-image: url("/public/plugin/we-core/files/jquery.dataTables/images/sort_both.png");
 }
 table.dataTable thead .sorting_asc {
-  background-image: url("../images/sort_asc.png");
+  background-image: url("/public/plugin/we-core/files/jquery.dataTables/images/sort_asc.png");
 }
 table.dataTable thead .sorting_desc {
-  background-image: url("../images/sort_desc.png");
+  background-image: url("/public/plugin/we-core/files/jquery.dataTables/images/sort_desc.png");
 }
 table.dataTable thead .sorting_asc_disabled {
-  background-image: url("../images/sort_asc_disabled.png");
+  background-image: url("/public/plugin/we-core/files/jquery.dataTables/images/sort_asc_disabled.png");
 }
 table.dataTable thead .sorting_desc_disabled {
-  background-image: url("../images/sort_desc_disabled.png");
+  background-image: url("/public/plugin/we-core/files/jquery.dataTables/images/sort_desc_disabled.png");
 }
 table.dataTable tbody tr {
   background-color: #ffffff;
@@ -100,7 +100,7 @@ table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.o
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: whitesmoke;
 }
-table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
+table.dataTable.hover t..body tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
   background-color: #a9b7d1;
 }
 table.dataTable.order-column tbody tr > .sorting_1,
