--- a/server/templates/auth/register.hbs
+++ b/server/templates/auth/register.hbs
@@ -1,3 +1,10 @@
+<ul class="nav nav-tabs">
+  <li role="presentation">{{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}</li>
+  <li role="presentation" class="active">{{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
+  <li role="presentation">{{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}</li>
+</ul>
+<br>
+
 {{#unless newUserCreated}}
   {{{form 'register' record validationError}}}
 {{/unless}}
