update auth menu list

--- a/server/templates/auth/forgot-password.hbs
+++ b/server/templates/auth/forgot-password.hbs
@@ -1,7 +1,13 @@
 <ul class="nav nav-tabs">
-  <li role="presentation">{{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}</li>
-  <li role="presentation">{{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
-  <li role="presentation" class="active">{{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}</li>
+  <li role="presentation">
+    {{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}
+  </li>
+  <li role="presentation">
+    {{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
+  </li>
+  <li role="presentation" class="active">
+    {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
+  </li>
 </ul>
 <br>
 
