--- a/server/widgets/html/view.hbs
+++ b/server/widgets/html/view.hbs
@@ -1,1 +1,1 @@
-{{#widget-wrapper widget}}<bind-html model-widget-{{widget.id}}="configuration.html">{{{widget.configuration.html}}}</bind-html>{{/widget-wrapper}}
+<bind-html model-widget-{{widget.id}}="configuration.html">{{{widget.configuration.html}}}</bind-html>
