--- a/server/templates/default/delete.hbs
+++ b/server/templates/default/delete.hbs
@@ -1,7 +1,8 @@
 <div class="text-center">
   <p>{{{t deleteMsg}}}</p>
   <form method="post">
+    <a class="btn btn-default" href="{{redirectTo}}">{{t 'Return'}}</a>
     <button class="btn btn-danger">{{t 'Delete'}}</button>
-    <input name="redirectTo" type="hidden" value="{{deleteRedirectUrl}}">
+    <input name="redirectTo" type="hidden" value="{{redirectTo}}">
   </form>
 </div>
