disable layout btn

--- a/server/templates/components-core.hbs
+++ b/server/templates/components-core.hbs
@@ -42,8 +42,8 @@
   </div>
 </form>
 </div>
-
+{{!--
 <div class="we-layout-edit-btn">
-<button id="we-layout-start-edit-btn" onclick="we.structure.showLayoutEditor();" type="button" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-edit text-info"></i> {{t 'layout.edit.btn'}}</button>
-<button id="we-layout-stop-edit-btn" style="display:none;" onclick="we.structure.hideLayoutEditor();" type="button" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-check text-success"></i> {{t 'layout.edit.hide.btn'}}</button>
-</div>
+<button id="we-layout-start-edit-btn" onclick="we.structure.showLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit text-info"></i> {{t 'layout.edit.btn'}}</button>
+<button id="we-layout-stop-edit-btn" style="display:none;" onclick="we.structure.hideLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-check text-success"></i> {{t 'layout.edit.hide.btn'}}</button>
+</div> --}}
