--- a/server/templates/components-core.hbs
+++ b/server/templates/components-core.hbs
@@ -5,45 +5,32 @@
 <form>
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
-      <div class="modal-header"><button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button><h4 class="modal-title">{{t 'widget.add'}}</h4></div>
-
+      <div class="modal-header">
+        <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button><h4 class="modal-title">{{t 'widget.add'}}</h4>
+      </div>
       <div class="modal-body">
-        <ul class="nav nav-pills nav-justified">
-          <li role="presentation" class="active">
-            <a href="javascript:;">Step 1</a>
-          </li>
-          <li role="presentation"  class="disabled">
-            <a href="javascript:;" class="disabled">Step 2</a>
-          </li>
-          <li role="presentation"  class="disabled">
-            <a href="javascript:;">Step 3</a>
-          </li>
-        </ul>
-
-        <br>
-        <div class="step1">
-          <div class="form-group">
-            <label>{{t 'layout.select.widget.type'}}</label>
-            <select id="AddWidgetFormModal-select-type" name="type" class="form-control">
-              <option value=""></option>
-            </select>
+        <div class="steps-body">
+          <div class="step1">
+            <div class="form-group">
+              <label>{{t 'layout.select.widget.type'}}</label>
+              <select id="AddWidgetFormModal-select-type" name="type" class="form-control">
+                <option value=""></option>
+              </select>
+            </div>
+            <div class="clearfix"></div><hr>
+            <div class="form-group">
+              <button type="button" class="btn btn-primary" onclick="we.structure.goToStep2();"><i class="glyphicon glyphicon-step-forward"></i> {{t 'Next'}}</button>
+            </div>
           </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-primary"><i class="glyphicon glyphicon-step-forward"></i> {{t 'Next'}}</button>
-          </div>
+          <div class="step2"></div>
         </div>
-
-        <div class="step2">
-
-        </div>
-
       </div>
     </div>
   </div>
 </form>
 </div>
-{{!--
+
 <div class="we-layout-edit-btn">
-<button id="we-layout-start-edit-btn" onclick="we.structure.showLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit text-info"></i> {{t 'layout.edit.btn'}}</button>
-<button id="we-layout-stop-edit-btn" style="display:none;" onclick="we.structure.hideLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-check text-success"></i> {{t 'layout.edit.hide.btn'}}</button>
-</div> --}}
+  <button id="we-layout-start-edit-btn" onclick="we.structure.showLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit text-info"></i> {{t 'layout.edit.btn'}}</button>
+  <button id="we-layout-stop-edit-btn" style="display:none;" onclick="we.structure.hideLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-check text-success"></i> {{t 'layout.edit.hide.btn'}}</button>
+</div>
