--- a/server/templates/widget.hbs
+++ b/server/templates/widget.hbs
@@ -1,10 +1,13 @@
 <widget data-widget-type="{{record.type}}" model-widget="{{record.id}}" class="widget widget-{{record.type}}">
   <div class="we-region-widget-actions">
     {{t 'Widget'}}: {{record.title}} {{record.id}}:
+    <button onclick="we.structure.updateWidget({{record.id}});" type="button" class="btn btn-default">
+      <i class="glyphicon glyphicon-pencil"></i> {{t 'Edit'}}
+    </button>
 
-    <button we-action="event" event="update-widget-modal" model-id="{{record.id}}" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> {{t 'Edit'}}</button>
-
-    <a href="" we-action="event" event="model-delete-widget" model="widget" model-id="{{record.id}}" class="btn btn-default">{{t 'Delete'}}</a>
+    <button onclick="we.structure.deleteWidget({{record.id}});" type="button" class="btn btn-default">
+      <i class="glyphicon glyphicon glyphicon-remove text-danger"></i> {{t 'Delete'}}
+    </button>
   </div>
 
   <widget-header class="widget-header">
