update widget sort and widget api

--- a/files/public/we.css
+++ b/files/public/we.css
@@ -37,3 +37,8 @@ body.we-editing-layout .widget {
 body.we-editing-layout .widget:hover{
   border-color: chocolate;
 }
+
+.modal-body .container {
+  display: block;
+  width: auto;
+}
