update paginate helper and template to show sumary and add more data to template

--- a/server/templates/paginate.hbs
+++ b/server/templates/paginate.hbs
@@ -1,3 +1,8 @@
+{{#unless hideSumary}}
+  <div class="paginate-sumary">
+    {{t 'paginate.sumary' recordsLength=recordsLength count=count}}
+  </div>
+{{/unless}}
 <nav>
   <ul class="pagination">
     {{#if previus}}
