--- a/server/templates/menu/menu.hbs
+++ b/server/templates/menu/menu.hbs
@@ -2,11 +2,14 @@
   {{#each menu.links}}
     {{#each this}}
       {{#if links}}
+
+{{#if dividerAfter}}<li class="divider"></li>{{/if}}
 <li class="dropdown">
   <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#"> {{{text}}} <span class="caret"></span></a>
   <ul class="dropdown-menu">
     {{#each links}}
       {{#if text}}
+        {{#if dividerAfter}}<li class="divider"></li>{{/if}}
         <li>
           <a {{#if href}}href="{{href}}"{{/if}} {{#if title}}title="{{title}}"{{/if}} {{#if class}}class="{{class}}"{{/if}} style="{{style}}" target="{{target}}" rel="{{rel}}">
             {{{text}}}
@@ -17,6 +20,8 @@
   </ul>
 </li>
       {{else}}
+
+{{#if dividerAfter}}<li class="divider"></li>{{/if}}
 <li>
   <a {{#if href}}href="{{href}}"{{/if}} {{#if title}}title="{{title}}"{{/if}} {{#if class}}class="{{class}}"{{/if}} style="{{style}}" target="{{target}}" rel="{{rel}}">
     {{{text}}}
