--- a/server/templates/menu/menu.hbs
+++ b/server/templates/menu/menu.hbs
@@ -7,7 +7,7 @@
 <li class="dropdown">
   <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#"> {{{text}}} <span class="caret"></span></a>
   <ul class="dropdown-menu">
-    {{#each links}}
+    {{#each links}}{{#each this}}
       {{#if text}}
         {{#if dividerAfter}}<li class="divider"></li>{{/if}}
         <li>
@@ -16,7 +16,7 @@
           </a>
         </li>
       {{/if}}
-    {{/each}}
+    {{/each}}{{/each}}
   </ul>
 </li>
       {{else}}
