--- a/server/templates/user/findOne.hbs
+++ b/server/templates/user/findOne.hbs
@@ -1,3 +1,2 @@
-<h1>{{record.displayName}}</h1> @{{record.username}}
-
-{{{record.biography}}}
+@{{record.username}}
+<div>{{{record.biography}}}</div>
