add default submenu active css

--- a/files/public/we.css
+++ b/files/public/we.css
@@ -48,7 +48,14 @@ a.tabledrag-handle .handle {
   width: 25px !important;
 }
 
+/* side menu */
+
 .li-submenu ul {
   border-left: 10px solid #ddd;
   padding-left: 3px;
+  display: none;
+}
+
+.li-submenu.active ul {
+  display: block;
 }
