change record to data and update passport strategies logic

--- a/server/templates/auth/register.hbs
+++ b/server/templates/auth/register.hbs
@@ -12,5 +12,5 @@
 <br>
 
 {{#unless newUserCreated}}
-  {{{form 'register' record validationError}}}
+  {{{form 'register' data validationError}}}
 {{/unless}}
