--- a/server/templates/default/findOne.hbs
+++ b/server/templates/default/findOne.hbs
@@ -1,6 +1,6 @@
 <table class="table table-striped table-hover">
   <tbody>
-    {{#each record.dataValues }}
+    {{#each data.dataValues }}
       <tr>
         <th>{{@key}}</th>
         <td>{{this}}</td>
@@ -9,8 +9,8 @@
   </tbody>
   <tfoot>
     <td colspan="2">
-      {{we-action-edit-btn resourceName record req record.id}}
-      {{we-action-delete-btn resourceName record req record.id}}
+      {{we-action-edit-btn resourceName data req data.id}}
+      {{we-action-delete-btn resourceName data req data.id}}
     </td>
   </tfoot>
 </table>
