--- a/server/templates/widget/sortWidgets.hbs
+++ b/server/templates/widget/sortWidgets.hbs
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody class="ui-sortable">
-    {{#each record}}
+    {{#each data}}
       <tr model-widget="{{id}}" class="ui-state-default ui-sortable-handle" model-id="{{id}}" data-weight="{{weight}}">
         <td style="width: 30px; cursor: move;"><span class="glyphicon glyphicon-resize-vertical"></span></td>
         <td>
