--- a/server/templates/auth/new-password.hbs
+++ b/server/templates/auth/new-password.hbs
@@ -1,3 +1,3 @@
 {{#unless successfully}}
-  {{{form 'new-password' record validationError}}}
+  {{{form 'new-password' data validationError}}}
 {{/unless}}
