--- a/server/templates/widget.hbs
+++ b/server/templates/widget.hbs
@@ -1,3 +1,4 @@
+{{#unless record.hide}}
 <widget record-widget-type="{{record.type}}" model-widget="{{record.id}}" class="widget widget-{{record.type}}">
   <div class="we-region-widget-actions">
     {{t 'Widget'}}: {{record.title}} {{record.id}}:
@@ -17,3 +18,4 @@
   </widget-header>
   <widget-content class="widget-content">{{{widgetContent}}}</widget-content>
 </widget>
+{{/unless}}
