update widget and layout tag names

--- a/server/templates/region.hbs
+++ b/server/templates/region.hbs
@@ -1,9 +1,8 @@
-<we-region id="region-{{name}}" class="{{attrs.class}}">
+<div data-we-region="{{name}}" id="region-{{name}}" class="{{attrs.class}}">
   <div class="we-region-actions">
     {{name}}:
-      <button onclick="we.structure.openAddWidgetForm('{{name}}');" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
-
-      <button onclick="we.structure.sortRegionWidgetsForm('{{name}}');" type="button" class="btn btn-default"><i class="glyphicon glyphicon-align-justify"></i></button>
+    <button onclick="we.structure.openAddWidgetForm('{{name}}');" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
+    <button onclick="we.structure.sortRegionWidgetsForm('{{name}}');" type="button" class="btn btn-default"><i class="glyphicon glyphicon-align-justify"></i></button>
   </div>
-  <widgets>{{{widgets}}}</widgets>
-</we-region>
+  <div id="region-{{name}}-widgets" class="region-widgets">{{{widgets}}}</div>
+</div>
