--- a/server/templates/widget.hbs
+++ b/server/templates/widget.hbs
@@ -1,5 +1,5 @@
 {{#unless record.hide}}
-<widget record-widget-type="{{record.type}}" model-widget="{{record.id}}" class="widget widget-{{record.type}}">
+<div id="widget-{{record.id}}" data-record-widget-type="{{record.type}}" data-model-widget="{{record.id}}" class="widget widget-{{record.type}}">
   <div class="we-region-widget-actions">
     {{t 'Widget'}}: {{record.title}} {{record.id}}:
     <button onclick="we.structure.updateWidget({{record.id}});" type="button" class="btn btn-default">
@@ -11,11 +11,11 @@
     </button>
   </div>
 
-  <widget-header class="widget-header">
+  <div class="widget-header">
     {{#if record.title}}
       <h3><bind-html {{attrTitle}}>{{record.title}}</bind-html></h3>
     {{/if}}
-  </widget-header>
-  <widget-content class="widget-content">{{{widgetContent}}}</widget-content>
-</widget>
+  </div>
+  <div class="widget-content">{{{widgetContent}}}</div>
+</div>
 {{/unless}}
