--- a/server/templates/auth/forgot-password.hbs
+++ b/server/templates/auth/forgot-password.hbs
@@ -1,16 +1,20 @@
-<ul class="nav nav-tabs">
-  <li role="presentation">
-    {{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}
-  </li>
-  <li role="presentation">
-    {{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
-  </li>
-  <li role="presentation" class="active">
-    {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
-  </li>
-</ul>
-<br>
+{{#unless req.user.id}}
+  <ul class="nav nav-tabs">
+    <li role="presentation">
+      {{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}
+    </li>
+    <li role="presentation">
+      {{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
+    </li>
+    <li role="presentation" class="active">
+      {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
+    </li>
+  </ul>
+  <br>
 
-{{#unless emailSend}}
-  {{{form 'forgot-password' user}}}
+  {{#unless emailSend}}
+    {{{form 'forgot-password' user}}}
+  {{/unless}}
+{{else}}
+  <p>{{{t 'auth.login.authenticated.msg'}}}</p>
 {{/unless}}
