--- a/server/templates/auth/login.hbs
+++ b/server/templates/auth/login.hbs
@@ -1,14 +1,17 @@
-<ul class="nav nav-tabs">
-  <li role="presentation" class="active">
-    {{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}
-  </li>
-  <li role="presentation">
-    {{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
-  </li>
-  <li role="presentation">
-    {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
-  </li>
-</ul>
-<br>
-
-{{{form 'login' user}}}
+{{#unless req.user.id}}
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active">
+      {{#link-to 'auth.login'}}{{t 'Login'}}{{/link-to}}
+    </li>
+    <li role="presentation">
+      {{#link-to 'auth.signup'}}{{t 'Register'}}{{/link-to}}
+    </li>
+    <li role="presentation">
+      {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
+    </li>
+  </ul>
+  <br>
+  {{{form 'login' user}}}
+{{else}}
+  <p>{{{t 'auth.login.authenticated.msg'}}}</p>
+{{/unless}}
