--- a/server/templates/paginate.hbs
+++ b/server/templates/paginate.hbs
@@ -1,31 +1,31 @@
 <nav>
   <ul class="pagination">
     {{#if previus}}
-      <li><a href="{{previus.p}}" aria-label="Previous">
+      <li><a href="{{{previus.p}}}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a></li>
     {{/if}}
     {{#if haveMoreBefore}}
-      <li><a href="{{first.p}}">
-        <span>{{first.n}}</span>
+      <li><a href="{{{first.p}}}">
+        <span>{{{first.n}}}</span>
       </a></li>
       <li class="paginate-have-more-before disabled">
         <span>...</span>
       </a></li>
     {{/if}}
     {{#each links}}
-      <li {{#if active}}class="active"{{/if}}><a href="{{p}}">{{n}}</a></li>
+      <li {{#if active}}class="active"{{/if}}><a href="{{{p}}}">{{{n}}}</a></li>
     {{/each}}
     {{#if haveMoreAfter}}
       <li class="paginate-have-more-after disabled"><a>
         <span>...</span>
       </a></li>
-      <li><a href="{{last.p}}">
-        <span>{{last.n}}</span>
+      <li><a href="{{{last.p}}}">
+        <span>{{{last.n}}}</span>
       </a></li>
     {{/if}}
     {{#if next}}
-      <li><a href="{{next.p}}" aria-label="Next">
+      <li><a href="{{{next.p}}}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a></li>
     {{/if}}
