--- a/server/widgets/passport-strategies/view.hbs
+++ b/server/widgets/passport-strategies/view.hbs
@@ -1,3 +1,3 @@
 {{#each widget.strategies}}{{#if icon}}
-<a href="{{authUrl}}"><img width="70" src="{{icon}}"></a>
+<a href="{{authUrl}}"><img alt="{{t i18nTitle}}" width="70" src="{{icon}}"></a>
 {{/if}}{{/each}}
