add pagination in default find.hbs template

--- a/server/templates/default/find.hbs
+++ b/server/templates/default/find.hbs
@@ -24,6 +24,7 @@
   </tbody>
   <tfoot>
     <td colspan="2">
+      {{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
     </td>
   </tfoot>
 </table>
