--- a/server/templates/400.hbs
+++ b/server/templates/400.hbs
@@ -1,1 +1,6 @@
-400.hbs
+<div class="container">
+  <div class="jumbotron">
+    <h1>{{t 'response.badRequest.title'}}</h1>
+    <p>{{t 'response.badRequest.description'}}</p>
+  </div>
+</div>
