--- a/server/templates/403.hbs
+++ b/server/templates/403.hbs
@@ -1,1 +1,6 @@
-403.hbs
+<div class="container">
+  <div class="jumbotron">
+    <h1>{{t 'response.forbidden.title'}}</h1>
+    <p>{{t 'response.forbidden.description'}}</p>
+  </div>
+</div>
