--- a/server/templates/404.hbs
+++ b/server/templates/404.hbs
@@ -1,1 +1,6 @@
-404.hbs
+<div class="container">
+  <div class="jumbotron">
+    <h1>{{t 'response.notFound.title'}}</h1>
+    <p>{{t 'response.notFound.description'}}</p>
+  </div>
+</div>
