--- a/server/templates/500.hbs
+++ b/server/templates/500.hbs
@@ -1,1 +1,6 @@
-500.hbs
+<div class="container">
+  <div class="jumbotron">
+    <h1>{{t 'response.serverError.title'}}</h1>
+    <p>{{t 'response.serverError.description'}}</p>
+  </div>
+</div>
