--- a/server/widgets/user-logo-and-displayname/view.hbs
+++ b/server/widgets/user-logo-and-displayname/view.hbs
@@ -1,6 +1,6 @@
 {{#if locals.user}}
-<div class="user-data">
-  {{{we-image locals.user.avatar 'thumbnail' class="img-thumbnail"}}}
+<div class="user-data text-center">
+  {{{we-image locals.user.avatar 'medium' class="img-thumbnail"}}}
   <div>
     <h1 class="user-displayName">{{locals.user.displayName}}</h1>
     <p>{{#each locals.user.organization}}{{this}}{{/each}}</p>
