--- a/server/templates/user/findOne.hbs
+++ b/server/templates/user/findOne.hbs
@@ -1,2 +1,10 @@
-<h3>{{data.displayName}}</h3>
-<div>{{{data.biography}}}</div>
+<div class="user-banner"
+  {{#if data.banner}}{{#each data.banner}}
+    style="background-image: url('{{urls.original}}');"
+  {{/each}}{{/if}}
+>
+&nbsp;
+</div>
+
+<div class="clearfix"></div>
+<div class="user-biography">{{{data.biography}}}</div>
