--- a/server/templates/components-core.hbs
+++ b/server/templates/components-core.hbs
@@ -32,8 +32,17 @@
   </div>
 </form>
 </div>
-<div class="we-layout-edit-btn">
-  <button id="we-layout-start-edit-btn" onclick="we.structure.showLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit text-info"></i> {{t 'layout.edit.btn'}}</button>
-  <button id="we-layout-stop-edit-btn" style="display:none;" onclick="we.structure.hideLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-check text-success"></i> {{t 'layout.edit.hide.btn'}}</button>
-</div>
 {{/can}}
+<div class="system-actions">
+  {{#can permission='manage_widget' roleNames=req.userRoleNames}}
+  <div class="we-layout-edit-btn">
+    <button id="we-layout-start-edit-btn" onclick="we.structure.showLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-edit text-info"></i> {{t 'layout.edit.btn'}}</button>
+    <button id="we-layout-stop-edit-btn" style="display:none;" onclick="we.structure.hideLayoutEditor();" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-check text-success"></i> {{t 'layout.edit.hide.btn'}}</button>
+  </div>
+  {{/can}}
+  {{#can permission='access_admin' roleNames=req.userRoleNames}}
+  <div class="we-admin-btn">
+    <a href="/admin" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-cog"></span></a>
+  </div>
+  {{/can}}
+</div>
