add suport to user privacity field attr filter

--- a/server/templates/user/edit.hbs
+++ b/server/templates/user/edit.hbs
@@ -1,1 +1,8 @@
-{{{form-model 'user' data validationError}}}
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="#">Edit</a></li>
+  <li role="presentation"><a href="#">Privacity</a></li>
+</ul>
+<div class="tab-content">
+  <br>
+  {{{form-model 'user' data validationError}}}
+</div>
