add tab-content class in auth pages

--- a/server/templates/auth/forgot-password.hbs
+++ b/server/templates/auth/forgot-password.hbs
@@ -10,11 +10,11 @@
       {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
     </li>
   </ul>
-  <br>
-
-  {{#unless emailSend}}
-    {{{form 'forgot-password' user}}}
-  {{/unless}}
+  <div class="tab-content">
+    {{#unless emailSend}}
+      {{{form 'forgot-password' user}}}
+    {{/unless}}
+  </div>
 {{else}}
   <p>{{{t 'auth.login.authenticated.msg'}}}</p>
 {{/unless}}
