--- a/server/templates/auth/register.hbs
+++ b/server/templates/auth/register.hbs
@@ -10,10 +10,11 @@
       {{#link-to 'auth.forgotPassword'}}{{t 'auth.forgot-password'}}{{/link-to}}
     </li>
   </ul>
-  <br>
-  {{#unless newUserCreated}}
-    {{{form 'register' data validationError}}}
-  {{/unless}}
+  <div class="tab-content">
+    {{#unless newUserCreated}}
+      {{{form 'register' data validationError}}}
+    {{/unless}}
+  </div>
 {{else}}
   <p>{{{t 'auth.login.authenticated.msg'}}}</p>
 {{/unless}}
