update widget api to sort works with hidden widgets and close wejs/we#132

--- a/files/public/we.css
+++ b/files/public/we.css
@@ -112,3 +112,11 @@ a.tabledrag-handle .handle {
 #ui-datepicker-div {
   z-index: 1001;
 }
+
+.widget-hidden {
+  display: none;
+}
+
+body.we-editing-layout .widget-hidden {
+  display: block;
+}
