--- a/server/templates/widget.hbs
+++ b/server/templates/widget.hbs
@@ -1,5 +1,4 @@
-{{#unless record.hide}}
-<div id="widget-{{{record.id}}}" data-record-widget-type="{{{record.type}}}" data-model-widget="{{{record.id}}}" class="widget widget-{{record.type}}">
+<div id="widget-{{{record.id}}}" data-record-widget-type="{{{record.type}}}" data-model-widget="{{{record.id}}}" class="widget widget-{{record.type}} widget-{{#if record.hide}}hidden{{/if}}">
   <div class="we-region-widget-actions">
     {{t 'Widget'}}: {{{record.title}}} {{{record.id}}}:
     <button onclick="we.structure.updateWidget({{{record.id}}});" type="button" class="btn btn-default">
@@ -10,12 +9,12 @@
       <i class="glyphicon glyphicon glyphicon-remove text-danger"></i> {{t 'Delete'}}
     </button>
   </div>
-
-  <div class="widget-header">
-    {{#if record.title}}
-      <h3><bind-html {{{attrTitle}}}>{{{record.title}}}</bind-html></h3>
-    {{/if}}
-  </div>
-  <div class="widget-content">{{{widgetContent}}}</div>
+  {{#unless record.hide}}
+    <div class="widget-header">
+      {{#if record.title}}
+        <h3><bind-html {{{attrTitle}}}>{{{record.title}}}</bind-html></h3>
+      {{/if}}
+    </div>
+    <div class="widget-content">{{{widgetContent}}}</div>
+  {{/unless}}
 </div>
-{{/unless}}
