set color of active item links in breadcrumb url

--- a/files/public/we.css
+++ b/files/public/we.css
@@ -120,3 +120,7 @@ a.tabledrag-handle .handle {
 body.we-editing-layout .widget-hidden {
   display: block;
 }
+
+.breadcrumb li.active a {
+  color: #777;
+}
